# napari-plugin-accelerator

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
examples/: demo.py
examples/data/: labels.tif
src/napari_plugin_accelerator/: __init__.py  _reader.py  _widget.py  _writer.py  napari.yaml
src/napari_plugin_accelerator/_tests/: test_dock_widget.py  test_reader.py  test_reader_writer.py  test_widget.py  test_writer.py
