[metadata]
name = napari-plugin-accelerator
version = 0.0.1
author = Andy Sweet
author_email = andrewdsweet@gmail.com
url = https://github.com/andy-sweet/napari-plugin-accelerator
license = BSD-3-Clause
description = A demo for the plugin accelerator program presentation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/andy-sweet/napari-plugin-accelerator/issues
    Documentation = https://github.com/andy-sweet/napari-plugin-accelerator#README.md
    Source Code = https://github.com/andy-sweet/napari-plugin-accelerator
    User Support = https://github.com/andy-sweet/napari-plugin-accelerator/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    napari>=0.4.13
    magicgui
    pandas
    qtpy
    scikit-image
    zarr

[options.extras_require]
testing =
    pytest
    pytest-cov
    pyqt5

[options.packages.find]
where = src

[options.package_data]
napari-plugin-accelerator =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-plugin-accelerator = napari_plugin_accelerator:napari.yaml
